# clipboard-wizard

./: Cargo.toml  README.md  clipboard_wizard.icns
src/: main.rs
